[bug fix] gave higher z-index to the drop down content

--- a/youtube-clone-back-end/frontend/youtube-clone-ui/src/app/components/dropdown/standard-dropdown/standard-dropdown.component.scss
+++ b/youtube-clone-back-end/frontend/youtube-clone-ui/src/app/components/dropdown/standard-dropdown/standard-dropdown.component.scss
@@ -9,16 +9,11 @@
     width: fit-content;
     height: auto;
     position: relative;
-    //transform: scaleY(0);
-    //transition: transform .2s ease-in;
-    //transition: width height 1.4s ease;
 }
 
 .base-menu-container, .sub-menu-container {
     width: fit-content;
     position: relative;
-    //transform: scaleY(0);
-    //transition: transform 0.2s ease;
 }
 
 .drop-button {
@@ -71,31 +66,29 @@
 
 .menu,
 .sub-menu {
-    //margin-top: 10px;
     list-style: none;
     padding: 0.2em 0.5em;
     background: #2a2a2a;
-    //background-color: pink;
     border-radius: 0.5em;
-    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 1);
     position: absolute;
     top: 110%;
-    right: 50%;
+    //right: 50%;
+    right: 20px;
     opacity: 0;
     display: none;
     transition: 0.2s;
-    z-index: 1;
 }
 
 .sub-menu {
     display: block;
-    //opacity: 1;
-    //background-color: pink;
+    z-index: 2;
 }
 
 .menu-open {
     display: block;
     opacity: 1;
+    z-index: 2;
 }
 
 .list-element, 
